# gui-gate

./: .gitignore  Cargo.toml  Dockerfile  install.ps1  install.sh
.github/workflows/: release.yml
src/: api.rs  app.rs  config.rs  doom.rs  main.rs  pong.rs  terminal.rs  ui.rs  updater.rs
